--- a/analise-aerea-drones.html
+++ b/analise-aerea-drones.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Análise Aérea com Drones - Alfa Drone</title>
+    <title>Análise Aérea com Drones - Eurodrones</title>
     <link href="Style_agricultura.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
 </head>
 <body>
     <header>
-        <h1>Análise aérea com drones - Alfa Drone</h1>
+        <h1>Análise aérea com drones - Eurodrones</h1>
     </header>
 
     <nav>
@@ -22,10 +22,10 @@
         <h2>Visão estratégica do seu campo com análise aérea de drones</h2>
         
         <div class="image-carousel">
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/drone-1.jpg" alt="Imagem 1"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/drone-2.jpg" alt="Imagem 2"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/drone-3.jpg" alt="Imagem 3"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/drone-4.jpg" alt="Imagem 4"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/drone-1.jpg" alt="Imagem 1"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/drone-2.jpg" alt="Imagem 2"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/drone-3.jpg" alt="Imagem 3"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/drone-4.jpg" alt="Imagem 4"></div>
         </div>
 
         <p><strong>Maximize a eficiência da sua produção agrícola com uma análise aérea detalhada utilizando drones!</strong></p>
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Alfa Drone - Todos os direitos reservados</p>
+        <p>&copy; 2025 Eurodrones - Todos os direitos reservados</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -62,3 +62,4 @@
     </script>
 </body>
 </html>
+
