Update logo and navigation links for Eurodrones

--- a/carrinho.html
+++ b/carrinho.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <div class="container">
-        <img src="images/logo.png" alt="Alfa Drones" class="logo" />
+        <img src="images/logo.png" alt="Eurodrones" class="logo" />
         <nav>
-          <a href="https://cezaradts.github.io/alfa-drones/index.html">Início</a>
-          <a href="https://cezaradts.github.io/alfa-drones/modelos.html">Continuar Comprando</a>
+          <a href="https://cezaradts.github.io/eurodrones/index.html">Início</a>
+          <a href="https://cezaradts.github.io/eurodrones/modelos.html">Continuar Comprando</a>
         </nav>
       </div>
     </header>
