Change branding from Alfa Drones to Eurodrones

--- a/finalizarCompra.html
+++ b/finalizarCompra.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Finalizar Compra | Alfa Drones</title>
+  <title>Finalizar Compra | Eurodrones</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <img src="images/logo.png" alt="Alfa Drones" class="logo" />
+      <img src="images/logo.png" alt="Eurodrones" class="logo" />
       <nav>
-        <a href="https://cezaradts.github.io/alfa-drones/index.html">Início</a>
-        <a href="https://cezaradts.github.io/alfa-drones/modelos.html">Modelos</a>
-        <a href="https://cezaradts.github.io/alfa-drones/carrinho.html">Carrinho</a>
+        <a href="https://cezaradts.github.io/eurodrones/index.html">Início</a>
+        <a href="https://cezaradts.github.io/eurodrones/modelos.html">Modelos</a>
+        <a href="https://cezaradts.github.io/eurodrones/carrinho.html">Carrinho</a>
       </nav>
     </div>
   </header>
@@ -186,7 +186,7 @@
  if (resposta.ok) {
   alert("Compra finalizada com sucesso!");
   localStorage.removeItem("carrinho");
-  window.location.href = "https://cezaradts.github.io/alfa-drones/index.html";
+  window.location.href = "https://cezaradts.github.io/eurodrones/index.html";
 }
       
     });
