--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Alfa Drones</title>
+    <title>Eurodrones</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <img src="images/logo.png" alt="Alfa Drones" class="logo" />
+        <img src="images/logo.png" alt="Eurodrones" class="logo" />
         <nav>
           <a href="#sobre">Sobre</a>
           <a href="#servicos">Serviços</a>
           <a href="agricultura.html">Agricultura</a>
           <a href="modelos.html">Produtos</a>
           <a href="https://cezaradts.github.io/alfa-drones-flask/index.html">Contato</a>
-          <a href="https://www.instagram.com/alfadronessolucoes/" target="_blank">Instagram</a>
+          <a href="https://www.instagram.com/eurodrones/" target="_blank">Instagram</a>
         </nav>
       </div>
     </header>
@@ -31,7 +31,7 @@
     <section class="section" id="sobre">
       <h2>Quem Somos</h2>
       <p class="center-text">
-        A Alfa Drones é especializada em soluções com drones para agricultura, engenharia, inspeções e filmagens. Com equipamentos modernos e equipe técnica certificada, oferecemos
+        A Eurodrones é especializada em soluções com drones para agricultura, engenharia, inspeções e filmagens. Com equipamentos modernos e equipe técnica certificada, oferecemos
         precisão, segurança e eficiência em cada voo.
       </p>
     </section>
@@ -59,7 +59,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Alfa Drones. Todos os direitos reservados.</p>
+      <p>© 2025 Eurodrones. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
