--- a/mapeamento-gps.html
+++ b/mapeamento-gps.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mapeamento GPS - Alfa Drone</title>
+    <title>Mapeamento GPS - Eurodrones</title>
     <link href="Style_agricultura.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
 </head>
 <body>
     <header>
-        <h1>Mapeamento com GNSS - Alfa Drone</h1>
+        <h1>Mapeamento com GNSS - Eurodrones</h1>
     </header>
 
     <nav>
@@ -21,10 +21,10 @@
     <section id="gps-service">
         <h2>Mapeamento com GNSS - Solução de alta precisão</h2>
         <div class="image-carousel">
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/gps-1.jpg" alt="Imagem 1"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/gps-2.jpg" alt="Imagem 2"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/gps-3.png" alt="Imagem 3"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/gps-4.jpg" alt="Imagem 4"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/gps-1.jpg" alt="Imagem 1"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/gps-2.jpg" alt="Imagem 2"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/gps-3.png" alt="Imagem 3"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/gps-4.jpg" alt="Imagem 4"></div>
         </div>
         <p><strong>Controle total do seu cultivo com mapeamento GNSS</strong></p>
         <p>Revolucione a gestão das suas áreas agrícolas com nosso serviço de mapeamento por GPS, uma solução que integra precisão
@@ -47,7 +47,7 @@
     </section>   
 
     <footer>
-        <p>&copy; 2025 Alfa Drone - Todos os direitos reservados</p>
+        <p>&copy; 2025 Eurodrones - Todos os direitos reservados</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -67,3 +67,4 @@
     </script>
 </body>
 </html>
+
