Update branding from Alfa Drone to Eurodrones

--- a/monitoramento-sensores.html
+++ b/monitoramento-sensores.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Monitoramento de Sensores - Alfa Drone</title>
+    <title>Monitoramento de Sensores - Eurodrones</title>
     <link href="Style_agricultura.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
 </head>
 <body>
     <header>
-        <h1>Monitoramento com sensores - Alfa Drone</h1>
+        <h1>Monitoramento com sensores - Eurodrones</h1>
     </header>
 
     <nav>
@@ -22,14 +22,14 @@
         <h2>Controle total do seu solo com monitoramento inteligente</h2>
         
         <div class="image-carousel">
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/sensor-1.jpg" alt="Imagem 1"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/sensor-2.jpg" alt="Imagem 2"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/sensor-3.jpg" alt="Imagem 3"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/sensor-4.jpg" alt="Imagem 4"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/sensor-1.jpg" alt="Imagem 1"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/sensor-2.jpg" alt="Imagem 2"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/sensor-3.jpg" alt="Imagem 3"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/sensor-4.jpg" alt="Imagem 4"></div>
         </div>
 
         <p><strong>Maximize a eficiência da sua produção agrícola com monitoramento inteligente do solo!</strong></p>
-        <p>Nossa tecnologia de sensores acompanha em tempo real variáveis essenciais como umidade, temperatura e pH, garantindo um ambiente ideal para o desenvolvimento saudável das plantas. Com o monitoramento inteligente da Alfa Drone, você tem a certeza de que suas lavouras estão sendo tratadas de forma otimizada, sem desperdícios.</p>
+        <p>Nossa tecnologia de sensores acompanha em tempo real variáveis essenciais como umidade, temperatura e pH, garantindo um ambiente ideal para o desenvolvimento saudável das plantas. Com o monitoramento inteligente da Eurodrones, você tem a certeza de que suas lavouras estão sendo tratadas de forma otimizada, sem desperdícios.</p>
         <p><strong>Benefícios do monitoramento com sensores:</strong></p>
         <ul>
             <li>Controle em tempo real das condições do solo</li>
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Alfa Drone - Todos os direitos reservados</p>
+        <p>&copy; 2025 Eurodrones - Todos os direitos reservados</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -62,3 +62,4 @@
     </script>
 </body>
 </html>
+
