--- a/variabilidade-espacial-temporal.html
+++ b/variabilidade-espacial-temporal.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mapeamento da Variabilidade Espacial e Temporal - Alfa Drone</title>
+    <title>Mapeamento da Variabilidade Espacial e Temporal - Eurodrones</title>
     <link href="Style_agricultura.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
 </head>
 <body>
     <header>
-        <h1>Mapeamento da variabilidade espacial e temporal - Alfa Drone</h1>
+        <h1>Mapeamento da variabilidade espacial e temporal - Eurodrones</h1>
     </header>
 
     <nav>
@@ -22,10 +22,10 @@
         <h2>Decisões inteligentes começam com dados precisos!</h2>
         
         <div class="image-carousel">
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/variabilidade-1.jpg" alt="Imagem 1"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/variabilidade-2.jpg" alt="Imagem 2"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/variabilidade-3.jpg" alt="Imagem 3"></div>
-            <div><img src="https://cezaradts.github.io/alfa-drones/images/variabilidade-4.jpg" alt="Imagem 4"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/variabilidade-1.jpg" alt="Imagem 1"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/variabilidade-2.jpg" alt="Imagem 2"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/variabilidade-3.jpg" alt="Imagem 3"></div>
+            <div><img src="https://cezaradts.github.io/eurodrones/images/variabilidade-4.jpg" alt="Imagem 4"></div>
         </div>
 
         <p><strong>O mapeamento da variabilidade espacial e temporal oferece uma análise detalhada das lavouras, ao longo do tempo e em diferentes regiões!</strong></p>
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Alfa Drone - Todos os direitos reservados</p>
+        <p>&copy; 2025 Eurodrones - Todos os direitos reservados</p>
     </footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -62,3 +62,4 @@
     </script>
 </body>
 </html>
+
