--- a/modelos.html
+++ b/modelos.html
@@ -63,10 +63,10 @@
 
 <header>
   <div class="container">
-    <img src="images/logo.png" alt="Alfa Drones" class="logo">
+    <img src="images/logo.png" alt="Eurodrones" class="logo">
     <nav>
       <a href="index.html">Início</a>
-      <a href="https://cezaradts.github.io/alfa-drones/carrinho.html">Carrinho</a>
+      <a href="https://cezaradts.github.io/eurodrones/carrinho.html">Carrinho</a>
        <a href="https://cezaradts.github.io/alfa-drones-flask/index.html">Contato</a>
     </nav>
   </div>
