--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="#servicos">Serviços</a>
           <a href="agricultura.html">Agricultura</a>
           <a href="modelos.html">Produtos</a>
-          <a href="https://cezaradts.github.io/alfa-drones-flask/index.html">Contato</a>
+          <a href="https://cezaradts.github.io/eurodrones/index.html">Contato</a>
           <a href="https://www.instagram.com/eurodrones/" target="_blank">Instagram</a>
         </nav>
       </div>
